--- a/templates/chat.html
+++ b/templates/chat.html
@@ -158,7 +158,7 @@
       <img src="https://alltags-buddy.com/Bilder/logo.png" alt="AlltagsBuddy Logo" class="logo" />
       <span class="site-title">AlltagsBuddy Chat</span>
     </div>
-    <a href="/index.html" class="cta-button">Zurück zur Startseite</a>
+    <a href="../../index.html" class="cta-button">Zurück zur Startseite</a>
   </header>
   <main>
     <h1>Chat mit deinem KI‑Buddy</h1>
